# OpenFGL

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
dataset/distrib/subgraph_fl_louvain_1_Cora_client_10/: data_0.pt  data_1.pt  data_2.pt  data_3.pt  data_4.pt  data_5.pt  data_6.pt  data_7.pt  data_8.pt  data_9.pt  description.txt  pre_transform.pt
dataset/distrib/subgraph_fl_louvain_1_Cora_client_20/: data_0.pt  data_1.pt  data_10.pt  data_11.pt  data_12.pt  data_13.pt  data_14.pt  data_15.pt  data_16.pt  data_17.pt  data_18.pt  data_19.pt  data_2.pt  data_3.pt  data_4.pt  data_5.pt  data_6.pt  data_7.pt  data_8.pt  data_9.pt  description.txt
dataset/distrib/subgraph_fl_louvain_1_Cora_client_3/: description.txt
docs/source/: conf.py  index.rst
openfgl/: config.py
openfgl/data/: distributed_dataset_loader.py  global_dataset_loader.py  processing.py  simulation.py
openfgl/flcore/: base.py  trainer.py
openfgl/flcore/adafgl/: _utils.py  adafgl_config.py  adafgl_models.py  client.py  label_propagation_models.py  op.py  server.py
openfgl/flcore/fedavg/: client.py  server.py
openfgl/flcore/feddc/: client.py  feddc_config.py  server.py
openfgl/flcore/feddep/: _utils.py  client.py  feddep_config.py  localdep.py  server.py
openfgl/model/: gat.py  gcn.py  gcn2.py  gin.py  global_edge.py  global_pan.py  global_sag.py  graphsage.py  mlp.py  sgc.py
openfgl/task/: base.py  graph_cls.py  link_pred.py  node_cls.py  node_clust.py
openfgl/utils/: analysis.py  basic_utils.py  logger.py  metrics.py  privacy_utils.py  task_utils.py
(+506 files in other folders)
